<resources>
    <string name="app_name">gp19s2</string>
    <string name="title_home">List</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Calendar</string>
    <string name="title_item1">item1</string>
    <string name="title_item2">item2</string>
    <string name="title_item3">item3</string>
    <string name="title_item4">item4</string>
    <string name="title_welcome">Welcome! \nThis is a todo list app which has below function: \n1. Adding/deleting an item. \n2. Editing an existing item. \n3. Tracking if an item has been completed. \n4. Calendar support. \n5. List view. \n6. message alert one day in advance</string>
    <string name="title_confirm">confirm</string>
    <string name="title_cancel">cancel</string>
    <string name="title_edit">NEW TODO</string>
    <string name="text_item1">TITLE</string>
    <string name="edit_item1">What do you want to do?</string>
    <string name="text_item2">DATE</string>
    <string name="edit_item2">When does this isuue due?</string>
    <string name="text_item3">Time</string>
    <string name="edit_item3">What time does this isuue due?</string>
    <string name="text_item4">Description</string>
    <string name="edit_item5">Edit here if you want to change title.</string>
    <string name="edit_item6">Edit here if you want to change date.</string>
    <string name="edit_item7">Edit here if you want to change time.</string>
    <string name="edit_item8">Edit here if you want to change description.</string>
    <string name="text_id">ID</string>
    <string name="edit_id">Which item you want to edit?</string>
    <string name="edit_item4">What exactly will you need to do?</string>
    <string name="list">show list</string>
    <string name="list2">Event list:\n\nlong click to delete, click to check detail</string>
    <string name="edit">EDIT</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="completed">Completed or not</string>
    <string name="title_activity_calendar2">Calendar</string>
</resources>
