<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit_or_add">
<!--    This part of codes refer to https://www.youtube.com/watch?v=vs3YKWPBs3I&t=273s-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/backgroundcolour">

        <TextView
            android:id="@+id/title_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_edit"
            android:textSize="50sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"/>
        <TextView
            android:id="@+id/text_item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_item1"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"/>
        <EditText
            android:id="@+id/edit_item1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/edit_item1"
            android:layout_marginLeft="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/inputselected"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:importantForAutofill="no"/>
        <TextView
            android:id="@+id/text_item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_item2"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"/>
        <EditText
            android:id="@+id/edit_item2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="date"
            android:hint="@string/edit_item2"
            android:layout_marginLeft="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/inputselected"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:importantForAutofill="no"/>
        <TextView
            android:id="@+id/text_item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_item3"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"/>
        <EditText
            android:id="@+id/edit_item3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="time"
            android:hint="@string/edit_item3"
            android:layout_marginLeft="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/inputselected"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:importantForAutofill="no"/>
        <TextView
            android:id="@+id/text_item4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_item4"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"/>
        <EditText
            android:id="@+id/edit_item4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/edit_item4"
            android:layout_marginLeft="15dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/inputselected"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:importantForAutofill="no"/>




    </LinearLayout>


</LinearLayout>